# SAS2AST

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  plan-a-full-parser.md  prd.md  pyproject.toml
docs/: plan-b-macro-deps.md  prd.md
sas2ast/: __init__.py  __main__.py
sas2ast/analyzer/: __init__.py  confidence.py  exporters.py  graph_model.py  guards.py  macro_graph.py  pdg.py  scanner.py  step_graph.py
sas2ast/common/: __init__.py  errors.py  keywords.py  models.py  tokens.py  utils.py
sas2ast/formatters/: __init__.py  html.py  json_fmt.py  rich_fmt.py  summary.py  tree.py
sas2ast/parser/: __init__.py  ast_nodes.py  grammar.py  grammar_datastep.py  grammar_expr.py  grammar_macro.py  grammar_proc.py  lineage.py  macro_expander.py  preprocessor.py  visitor.py
sas_code/data_step/: collapse_a_dataset.sas  hash_joins_and_more.sas  lead_methods.sas  read_tarball_zip_csv.sas  sort_dedupe_with_a_data_step.sas  timestamp_range_filtering.sas
sas_code/deferred/: get_va_report_data_sources.sas  hpds2.sas  network_analysis_grouping.sas  partitioning_autotuning.sas  proc_kclus.sas  unique_ids_in_cas.sas  va_api_change_data_source.sas
sas_code/macro/: genmax.sas  is_null.sas  macro_practice.sas  minoperator.sas  recursive_macros.sas  sequential_macro_variables.sas  timing_code_runs.sas
sas_code/mixed/: max_of_a_character.sas  python_function_integration.sas  solve_lever_puzzle.sas  speedy_stats.sas
sas_code/proc/: count_nonmissing_char_vars.sas  data_manipulation.sas  data_visualization.sas  proc_esm.sas  (+14 more)
tests/: conftest.py  test_cli.py  test_formatters.py
(+14 files in other folders)
